Add shareable quiz share CTA

--- a/index.html
+++ b/index.html
@@ -142,6 +142,17 @@
             <ul class="results__tags" id="score-tags"></ul>
           </article>
         </div>
+
+        <article class="results__card results__share">
+          <div>
+            <h3>Share your snapshot</h3>
+            <p class="results__detail">Copy a ready-to-post blurb to spark replies and collect leads.</p>
+          </div>
+          <p id="share-preview" class="results__share-preview">Complete the quiz to generate your blurb.</p>
+          <button id="copy-summary" class="btn btn--primary results__share-btn" type="button">
+            Copy my AI readiness blurb
+          </button>
+        </article>
       </aside>
     </section>
 
