Add score breakdown card to results

--- a/index.html
+++ b/index.html
@@ -141,6 +141,13 @@
             <h3>Leverage Scorecard</h3>
             <ul class="results__tags" id="score-tags"></ul>
           </article>
+          <article class="results__card results__breakdown">
+            <div class="results__breakdown-header">
+              <h3>Score breakdown</h3>
+              <p class="results__detail">See how each factor influenced your exposure score.</p>
+            </div>
+            <ul id="score-breakdown" class="breakdown"></ul>
+          </article>
         </div>
 
         <article class="results__card results__share">
